<resources>
    <string name="app_name">Banque Trèflerie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Refus
    <string name="messageRefus">Vous avez refusé les autorisations pour utiliser notre application !</string>
    <string name="messageRefus2">Notre application nécessite l\'envoi et la réception de SMS pour fonctionner</string>
    <string name="messageRefusExplication1">1 - Ouvrez "Paramètres"</string>
    <string name="messageRefusExplication2">2 - Ouvrez "Applications"</string>
    <string name="messageRefusExplication3">3 - Ouvrez "Banque trèflerie"</string>
    <string name="messageRefusExplication4">4 - Ouvrez "Autorisations"</string>
    <string name="messageRefusExplication5">5 - Cochez la case "SMS"</string>
    <string name="messageRefusExplication6">6 - Relancez l\'application</string>

    //Titres
    <string name="titreTransaction">Transaction</string>
    <string name="titreRefus">Autorisations refusées</string>
    <string name="titreSolde">Mon Solde</string>
    <string name="titreDepenses">Historique</string>
    <string name="titreParametres">Paramètres</string>

    //Menu
    <string name="menuAccueil">Accueil</string>
    <string name="menuAide">Aide</string>

    //Général / Utilisé plusieurs fois :
    <string name="textTrefles">Trèfles</string>
    <string name="boutonValide">Valider</string>

     //Transaction
    <string name="textNumeroDuDest">Destinataire :</string>
    <string name="TextMontant">Montant :</string>
    <string name="erreurMontantTransaction">Montant maximal : 250 trèfles   (réglable dans les paramètres)</string>
    <string name="erreurNumeroDestinataireTransaction">Erreur, ce numéro de compte n\'existe pas</string>


    //Mon solde
    <string name="textNumCompte">Compte N°?</string>
    <string name="textMsgSolde">Vous possédez :</string>
    <string name="textNbrTrefles">50,65</string>
    <string name="boutonActualiser">Actualiser</string>

    //Parametres
    <string name="textMontantMaxTransact">Montant maximal des transactions :</string>
    <string name="textConfigMode">Choisir le mode :</string>
    <string name="boutonDefaultServeur">Numéro par défaut</string>

        //RadioBoutons
        <string name="textRadioBoutonParticulier">Particulier</string>
        <string name="textRadioBoutonProfessionnel">Pro</string>

    //Depenses
    <string name="txtDepenses">Mes dépenses</string>
    <string name="titreCompteHistorique">Compte</string>
    <string name="titreMontantHistorique">Montant</string>
    <string name="titreDateHistorique">Date</string>

    //Aide
    <string name="titreAide">Aide</string>
    <string name="messageAideSupport">Vous pouvez nous demander plus d\'aide en nous envoyant un mail</string>
    <string name="messageAideSite">Vous pouvez trouver de l\'aide sur notre site</string>
    <string name="bouttonAideSupport">Mail au support</string>
    <string name="bouttonAideSite">www.treflerie.fr</string>


    <string name="boutonSiteAide">www.treflerie.info</string>
    <string name="boutonMailSupport">Envoyer un mail au support</string>

    <string name="txtAide">Aide</string>
    <string name="textNumeroServeur">Numéro serveur :</string>

    //Erreur Serveur
    <string name="messageErreurServeur">Le serveur ne répond pas. Veuillez rééssayer plus tard.</string>
    <string name="titreErreurServeur">Serveur indisponible</string>
    <string name="boutonErreurServeur">J\'ai compris</string>
    <string name="hint_login_jabber">Exemple : joel2</string>
    <string name="titreParametresJabber">Paramètres Jabber</string>
    <string name="msg_transaction_sucess">Transaction Réussie !</string>
    <string name="msg_transaction_fail">Transaction Echouée</string>
    <string name="transaction_titre_saisie_com">Commentaire : 100 caractères max. (facultatif)</string>

</resources>
