<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mAccueil"
            android:icon="@drawable/ic_menu_accueil"
            android:title="@string/menuAccueil" />
        <item
            android:id="@+id/mDepenses"
            android:icon="@drawable/ic_menu_depenses"
            android:title="@string/titreDepenses" />
        <item
            android:id="@+id/mSolde"
            android:icon="@drawable/ic_menu_solde"
            android:title="@string/titreSolde" />
        <item
            android:id="@+id/mTransaction"
            android:icon="@drawable/ic_menu_transaction"
            android:title="@string/titreTransaction" />
    </group>

    <item android:title="Aide">
        <menu>
            <item
                android:id="@+id/mAide"
                android:icon="@drawable/ic_menu_aide"
                android:title="@string/menuAide" />
            <item
                android:id="@+id/mParametres"
                android:icon="@drawable/ic_menu_parametres"
                android:title="@string/titreParametres" />
        </menu>
    </item>

</menu>
