<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gael.mestrefles.SoldeActivity"
    tools:showIn="@layout/app_bar_solde"
    style="@style/LinearLayoutBase">


    <TextView
        android:id="@+id/textNumCompte"
        style="@style/SousTitre"
        android:text="@string/textNumCompte"
        />

    <TextView
        android:id="@+id/textMsgSolde"
        style="@style/SousTitre"
        android:text="@string/textMsgSolde" />

    <TextView
        android:id="@+id/textNbrTrefles"
        style="@style/Titre"
        android:text="@string/textNbrTrefles" />

    <TextView
        android:id="@+id/textTrefles"
        style="@style/SousTitre"
        android:text="@string/textTrefles" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/boutonActualiser"
            style="@style/BoutonClassique"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/boutonActualiser" />


        <TextView
            android:id="@+id/texteReponseSolde"
            style="@style/Information"
            android:layout_below="@+id/boutonActualiser" />

    </RelativeLayout>

</LinearLayout>
</ScrollView>