<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/solde_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".SoldeActivity">

    <LinearLayout android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context=".SoldeActivity">

        <include layout="@layout/main_toolbar"/>

        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView"
            style="@style/ScrollViewBase">

            <LinearLayout
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.example.gael.activities.SoldeActivity"
                style="@style/LinearLayoutBase">


                <TextView
                    android:id="@+id/textNumCompte"
                    android:text="@string/textNumCompte"
                    style="@style/SousTitre" />

                <TextView
                    android:id="@+id/textMsgSolde"
                    android:text="@string/textMsgSolde"
                    style="@style/SousTitre"/>

                <TextView
                    android:id="@+id/textNbrTrefles"
                    android:text="@string/textNbrTrefles"
                    style="@style/Titre"/>

                <TextView
                    android:id="@+id/textTrefles"
                    android:text="@string/textTrefles"
                    style="@style/SousTitre"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/boutonActualiser"
                        android:text="@string/boutonActualiser"
                        style="@style/BoutonClassique"/>


                    <TextView
                        android:id="@+id/texteReponseSolde"
                        android:layout_below="@+id/boutonActualiser"
                        style="@style/ReponseServeur"/>

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/main_navigation_view"/>

</android.support.v4.widget.DrawerLayout>