<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gael.mestrefles.ParametresActivity"
    tools:showIn="@layout/app_bar_parametres">

    <TextView
        android:id="@+id/textMontantMaxTransact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/textMontantMaxTransact"
        android:textColor="@color/text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextMontantMax"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textTrefles"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textTrefles"
            android:textColor="@color/text"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/boutonValiderParametres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_weight="1"
        android:text="@string/boutonValide" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/colorSecondaryOrange"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAide"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtAide"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/boutonSiteAide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_weight="1"
            android:text="@string/boutonSiteAide" />
        <Button
            android:id="@+id/boutonMailSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_weight="1"
            android:text="@string/boutonMailSupport" />

    </LinearLayout>

</LinearLayout>