<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/aide_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".AideActivity">

        <LinearLayout android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            tools:context=".MenuPrincipal">

            <include layout="@layout/main_toolbar"/>

            <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/scrollView"
                xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/ScrollViewBase">

                <LinearLayout
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:context="com.example.gael.activities.ParametresActivity"
                    style="@style/LinearLayoutBase">


                    <TextView
                        android:id="@+id/textView"
                        android:text="@string/titreAide"
                        style="@style/SousTitre"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:text="@string/messageAideSite"
                        style="@style/TexteSimple"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp">

                        <Button
                            android:id="@+id/boutonSiteAide"
                            android:text="@string/bouttonAideSite"
                            style="@style/BoutonClassique"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:text="@string/messageAideSupport"
                        style="@style/TexteSimple"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/boutonMailSupport"
                            android:text="@string/bouttonAideSupport"
                            style="@style/BoutonClassique"/>
                    </RelativeLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <include layout="@layout/main_navigation_view"/>

    </android.support.v4.widget.DrawerLayout>

</android.support.v4.widget.DrawerLayout>