<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gael.mestrefles.MenuPrincipal"
    tools:showIn="@layout/app_bar_menu_principal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/BoutonTransaction"
            style="@style/BoutonClassique"
            android:layout_above="@+id/BoutonMesDepenses"
            android:layout_alignLeft="@+id/BoutonMesDepenses"
            android:layout_alignStart="@+id/BoutonMesDepenses"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:text="@string/titreTransaction" />

        <Button
            android:id="@+id/BoutonMonSolde"
            style="@style/BoutonClassique"
            android:layout_above="@+id/BoutonTransaction"
            android:layout_alignLeft="@+id/BoutonTransaction"
            android:layout_alignStart="@+id/BoutonTransaction"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:text="@string/titreSolde" />

        <Button
            android:id="@+id/BoutonParametres"
            style="@style/BoutonClassique"
            android:layout_below="@+id/BoutonMesDepenses"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/titreParametres" />

        <Button
            android:id="@+id/BoutonMesDepenses"
            style="@style/BoutonClassique"
            android:layout_alignLeft="@+id/BoutonParametres"
            android:layout_alignStart="@+id/BoutonParametres"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:text="@string/titreDepenses" />

        <Button
            android:id="@+id/BoutonAide"
            style="@style/BoutonClassique"
            android:layout_below="@+id/BoutonParametres"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="Aide" />
    </RelativeLayout>
</LinearLayout>
</ScrollView>