<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.gael.mestrefles.TransactionActivity"
    tools:showIn="@layout/app_bar_transaction"
    android:paddingTop="80dp">

    <TextView
        android:id="@+id/textNumeroDest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/textNumeroDuDest"
        android:layout_marginVertical="20dp"
        android:textColor="@color/text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextNumeroDest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/text"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/erreurNumeroCompte"
        android:text=""
        android:textAlignment="center"
        android:layout_marginLeft="50dp"
        android:textColor="@color/erreur"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/textMontant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/TextMontant"
        android:layout_marginVertical="20dp"
        android:textColor="@color/text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextMontant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/text"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/erreurMontantTransaction"
        android:text="@string/erreurMontantTransaction"
        android:textAlignment="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/erreur"
        android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/boutonValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/boutonValide"
        android:clickable="true"/>

</LinearLayout>