<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parametre_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".ParametresActivity">

    <LinearLayout android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context=".ParametresActivity">

        <include layout="@layout/main_toolbar"/>

        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ScrollViewBase">

            <LinearLayout
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.example.gael.mestrefles.ParametresActivity"
                style="@style/LinearLayoutBase">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textMontantMaxTransact"
                        android:layout_width="200dp"
                        android:text="@string/textMontantMaxTransact"
                        style="@style/TexteSimple"/>

                    <EditText
                        android:id="@+id/editTextMontantMax"
                        android:layout_width="115dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textAlignment="center" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp">

                    <View
                        style="@style/TraitNoir"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/textNumeroServeur"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="@string/textNumeroServeur"
                        android:textColor="@color/text"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextNumServeur"
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="60dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="60dp"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="phone"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:gravity="center"
                    android:paddingStart="15dp">


                    <Button
                        android:id="@+id/boutonDefaultServeur"
                        android:text="@string/boutonDefaultServeur"
                        style="@style/BoutonClassique"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="13dp">


                    <View
                        style="@style/TraitNoir"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/textConfigMode"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/textConfigMode"
                        style="@style/TexteSimple" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioBoutonParticulier"
                            android:text="@string/textRadioBoutonParticulier"
                            style="@style/RadioBouton"/>

                        <RadioButton
                            android:id="@+id/radioBoutonProfessionnel"
                            android:text="@string/textRadioBoutonProfessionnel"
                            style="@style/RadioBouton"/>
                    </RadioGroup>


                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="13dp">

                    <View
                        style="@style/TraitNoir"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="15dp"
                    android:gravity="center"
                    android:paddingStart="15dp">


                    <Button
                        android:id="@+id/boutonValiderParametres"
                        android:text="@string/boutonValide"
                        style="@style/BoutonClassique"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/main_navigation_view"/>

</android.support.v4.widget.DrawerLayout>